5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1679_1104.log
== TEST (2019-04-19 00:09:04) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	
	print("Intervalo 1: ", a, b)
	print("Intervalo 2: ", c, d)
	print("Ha intersecao")
elif (b <= d) or (c <= a):
	print("Intervalo 1: ", a, b)
	print("Intervalo 2: ", c, d)
	print("Nao ha intersecao")

	
-- OUTPUT:
Intervalo 1:  1.0 2.0
Intervalo 2:  4.0 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:09:28) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	
	print("Intervalo 1: ", a,"," b)
	print("Intervalo 2: ", c,"," d)
	print("Ha intersecao")
elif (b <= d) or (c <= a):
	print("Intervalo 1: ", a,"," b)
	print("Intervalo 2: ", c,"," d)
	print("Nao ha intersecao")

	
-- ERROR:
File "XXXX", line 8
    print("Intervalo 1: ", a,"," b)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:09:37) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	
	print("Intervalo 1: ", a,",", b)
	print("Intervalo 2: ", c,",", d)
	print("Ha intersecao")
elif (b <= d) or (c <= a):
	print("Intervalo 1: ", a,",", b)
	print("Intervalo 2: ", c,",", d)
	print("Nao ha intersecao")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:09:51) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	
	print("Intervalo 1: ", a,",", b)
	print("Intervalo 2: ", c,",", d)
	print("Ha intersecao")
elif (b <= d):
	print("Intervalo 1: ", a,",", b)
	print("Intervalo 2: ", c,",", d)
	print("Nao ha intersecao")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:10:13) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	
	print("Intervalo 1: ", a,",", b)
	print("Intervalo 2: ", c,",", d)
	print("Ha intersecao")
elif (b <= c):
	print("Intervalo 1: ", a,",", b)
	print("Intervalo 2: ", c,",", d)
	print("Nao ha intersecao")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:10:53) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (b <= c):
	print("Intervalo 1: ", a,",", b)
	print("Intervalo 2: ", c,",", d)
	print("Ha intersecao")
	
-- ERROR:
File "XXXX", line 8
    print("Intervalo 1: ", a,",", b)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:10:59) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:11:50) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (b >= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif ()
	
-- ERROR:
File "XXXX", line 11
    elif ()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:12:11) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (b >= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:12:15) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (b >= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:15:29) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (c <= b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (b < c) and b < d:
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:17:31) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (c <= b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:18:30) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a < d) and b > d:
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 00:19:01) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a < d) and b > d:
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- EXECUTION TIME:
0.156866
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Entradas invalidas
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:19:03) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a < d) and b > d:
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Entradas invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 00:19:42) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- EXECUTION TIME:
0.119913
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:19:43) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:21:15) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
	elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 00:21:17) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
	elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- EXECUTION TIME:
0.15819
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:21:20) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
	elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 00:22:29) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d) or (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (b > c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
	elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- EXECUTION TIME:
0.175063
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:22:30) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d) or (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (b > c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
	elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:25:20) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d) or (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (b > c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
	elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:25:45) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d) or (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (b > c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
	elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:48:37) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d) or (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (c > b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 00:48:43) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d) or (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (c > b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- EXECUTION TIME:
0.163798
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:48:46) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d) or (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (c > b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:48:57) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d) or (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (c > b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:49:03) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d) or (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (c > b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:49:25) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= d) or (b <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (c > b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:58:49) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= c and c < b ) or (c <= b and b < d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (c > b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:58:56) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= c and c < b ) or (c <= b and b < d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (c > b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:59:22) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= c and c < b ) or (c <= b and b < d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (c > b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:59:30) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= c and c < b ) or (c <= b and b < d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (c > b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 00:59:36) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= c and c < b ) or (c <= b and b < d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (c > b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
elif (b < a) or (d < c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 01:01:13) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))

if (b > a) and (d > c):
	if (a <= c and c < b ) or (c <= b and b < d):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Ha intersecao")
	elif (a > d) or (c > b):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Nao ha intersecao")
elif (b <= a) or (d <= c):
		print("Intervalo 1: ", a,",", b)
		print("Intervalo 2: ", c,",", d)
		print("Entradas invalidas")

	
-- EXECUTION TIME:
0.181513
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
